--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
     "precommit": "yarn lint",
     "dev": "nuxt",
     "build": "nuxt build",
