--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": ">=12.0.0",
-    "eslint-plugin-jest": ">=22.3.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.2.3",
     "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
     "prettier": "^1.18.2",
-    "nodemon": "^1.18.9"
+    "sass-loader": "^7.2.0"
   }
 }
