--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "bip32": "^2.0.4",
     "bip39": "^3.0.2",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
-    "push-dir": "^0.4.1"
+    "push-dir": "^0.4.1",
+    "slip39": "^0.1.5-dev.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
