--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seedhodler-next",
   "version": "1.0.0",
-  "description": "Shamir Secret Sharing built for BIP39 Mnemonics. Alternative implementation to https://github.com/iancoleman/shamir39",
+  "description": "Shamir Secret Sharing built for BIP39 Mnemonics implementing SLIP39",
   "author": "seedhodler",
   "private": true,
   "scripts": {
