--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,10 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Get the version
-      id: vars
-      run: |
-        echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
     - name: build image
       run: |
-        docker build -t "seedhodler:${{steps.vars.outputs.tag}}" .
+        docker build -t seedhodler:ci-build .
