--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bip32": "^2.0.4",
     "bip39": "^3.0.2",
+    "create-hash": "^1.2.0",
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.21",
     "push-dir": "^0.4.1",
