--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seedhodler-next",
+  "name": "seedhodler-beta",
   "version": "1.0.0",
   "description": "Shamir Secret Sharing built for BIP39 Mnemonics implementing SLIP39",
   "author": "seedhodler",
