--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
-        node-version: '16.x'
+        node-version: '16'
     - run: yarn install && yarn generate:gh-pages
     - name: deploy
       uses: peaceiris/actions-gh-pages@v2.5.0
